--- a/password_generator/frontend/style.css
+++ b/password_generator/frontend/style.css
@@ -1,16 +1,19 @@
 body {
   font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   background-color: #f4f4f4;
 }
 
-.container {
+h1 {
+  font-size: 30px;
+  font-weight: bold;
   text-align: center;
+}
+
+.container {
+  /*text-align: center;*/
+  margin: 20px auto;
   background: white;
-  padding: 20px;
+  padding: 30px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 300px;
@@ -18,17 +21,36 @@ body {
 
 button {
   background: #007bff;
+  width: 100%;
   color: white;
-  padding: 10px;
+  padding: 15px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 input {
-  margin: 10px 0;
+  margin: 0px 0;
   padding: 5px;
-  width: 100%;
   text-align: center;
+}
+
+.password-display {
+  color: rgb(169, 165, 165);
+  background-color: #f6f5f5;
+  padding: 10px;
+  width: 93%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: left;
+}
+
+.options {
+  margin-top: 20px;
+}
+
+.option {
+  display: flex;
+  justify-content: space-between;
 }
