--- a/password_generator/frontend/style.css
+++ b/password_generator/frontend/style.css
@@ -27,23 +27,25 @@ button {
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  margin-top: 20px;
 }
 
 input {
-  margin: 0px 0;
-  padding: 5px;
   text-align: center;
 }
 
-.password-display {
+.label {
+  padding: 10px 0px;
   color: rgb(169, 165, 165);
-  background-color: #f6f5f5;
-  padding: 10px;
-  width: 93%;
+}
+
+.input {
+  padding: 10px 0px;
+}
+
+.password-length {
   border: 1px solid #ccc;
-  border-radius: 5px;
-  text-align: left;
+  border-radius: 3px;
+  padding: 10px 5px;
 }
 
 .options {
@@ -53,4 +55,47 @@ input {
 .option {
   display: flex;
   justify-content: space-between;
+}
+
+.generate-password-container {
+  margin-top: 20px;
+}
+
+#generate-btn {
+  font-size: 16px;
+}
+
+#password-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.password-display {
+  color: rgb(169, 165, 165);
+  background-color: #f6f5f5;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: left;
+}
+
+#password {
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px;
+  border: 1px solid #ccc;
+  width: 200px;
+}
+#copy-btn {
+  cursor: pointer;
+  padding: 5px 10px;
+  border: none;
+  background-color: #4caf50;
+  color: white;
+  font-size: 16px;
+  border-radius: 3px;
+}
+#copy-btn:hover {
+  background-color: #45a049;
 }
